MDB_Bridge/imgui_exports.h

IMGUI_EXPORT bool igInputTextWithHint(const char* label, const char* hint, char* buf, size_t buf_size, ImGuiInputTextFlags flags, ImGuiInputTextCallback callback, void* user_data);
// ===== Widgets: Trees =====
IMGUI_EXPORT bool igTreeNode_Str(const char* label);
IMGUI_EXPORT bool igTreeNodeEx_Str(const char* label, ImGuiTreeNodeFlags flags);
IMGUI_EXPORT void igTreePop();
IMGUI_EXPORT bool igCollapsingHeader_TreeNodeFlags(const char* label, ImGuiTreeNodeFlags flags);
// ===== Widgets: Menus =====
IMGUI_EXPORT bool igBeginMainMenuBar();
IMGUI_EXPORT void igEndMainMenuBar();
IMGUI_EXPORT bool igBeginMenu(const char* label, bool enabled);
IMGUI_EXPORT void igEndMenu();
IMGUI_EXPORT bool igMenuItem_Bool(const char* label, const char* shortcut, bool selected, bool enabled);
// ===== Layout =====
IMGUI_EXPORT void igSeparator();
IMGUI_EXPORT void igSameLine(float offset_from_start_x, float spacing);
IMGUI_EXPORT void igIndent(float indent_w);
IMGUI_EXPORT void igUnindent(float indent_w);
IMGUI_EXPORT void igSetNextItemWidth(float item_width);
// ===== Style =====
IMGUI_EXPORT void igPushStyleColor_Vec4(ImGuiCol idx, ImVec4 col);
IMGUI_EXPORT void igPopStyleColor(int count);
// ===== Item/Widget utilities =====
IMGUI_EXPORT bool igIsItemClicked(ImGuiMouseButton mouse_button);
IMGUI_EXPORT bool igIsItemHovered(ImGuiHoveredFlags flags);
IMGUI_EXPORT bool igIsItemToggledOpen();
// ===== Widgets: Combo =====
IMGUI_EXPORT bool igBeginCombo(const char* label, const char* preview_value, ImGuiComboFlags flags);
IMGUI_EXPORT void igEndCombo();
IMGUI_EXPORT bool igSelectable_Bool(const char* label, bool selected, ImGuiSelectableFlags flags, ImVec2 size);
// ===== Widgets: Drag/Slider =====
IMGUI_EXPORT bool igDragFloat3(const char* label, float v[3], float v_speed, float v_min, float v_max, const char* format, ImGuiSliderFlags flags);
IMGUI_EXPORT bool igInputFloat3(const char* label, float v[3], const char* format, ImGuiInputTextFlags flags);
// ===== ID stack =====
IMGUI_EXPORT void igPushID_Str(const char* str_id);
IMGUI_EXPORT void igPushID_Int(int int_id);
IMGUI_EXPORT void igPopID();
// ===== Widgets: Drag =====
IMGUI_EXPORT bool igDragInt(const char* label, int* v, float v_speed, int v_min, int v_max, const char* format, ImGuiSliderFlags flags);
IMGUI_EXPORT bool igDragFloat(const char* label, float* v, float v_speed, float v_min, float v_max, const char* format, ImGuiSliderFlags flags);
// ===== Widgets: Color =====
IMGUI_EXPORT bool igColorButton(const char* desc_id, ImVec4 col, ImGuiColorEditFlags flags, ImVec2 size);