Documentation/Examples/MDB_Explorer_ImGui/ImGuiBindings.cs


        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "igInputTextWithHint")]
        private static extern unsafe byte igInputTextWithHint(
            byte* label,
            byte* hint,
            byte* buf,
            UIntPtr buf_size,
            ImGuiInputTextFlags flags,
            IntPtr callback,
            IntPtr user_data);

        public static unsafe bool InputTextWithHint(string label, string hint, ref string text, uint maxLength, ImGuiInputTextFlags flags = ImGuiInputTextFlags.None)
        {
            byte[] buffer = new byte[maxLength];
            if (!string.IsNullOrEmpty(text))
            {
                byte[] textBytes = Encoding.UTF8.GetBytes(text);
                Array.Copy(textBytes, buffer, Math.Min(textBytes.Length, buffer.Length - 1));
            }

            bool result;
            byte[] labelBytes = Encoding.UTF8.GetBytes(label + '\0');
            byte[] hintBytes = Encoding.UTF8.GetBytes((hint ?? "") + '\0');
            fixed (byte* bufPtr = buffer)
            fixed (byte* labelPtr = labelBytes)
            fixed (byte* hintPtr = hintBytes)
            {
                result = igInputTextWithHint(labelPtr, hintPtr, bufPtr, new UIntPtr((uint)buffer.Length), flags, IntPtr.Zero, IntPtr.Zero) != 0;
            }

            if (result)
            {
                int nullIndex = Array.IndexOf(buffer, (byte)0);
                text = Encoding.UTF8.GetString(buffer, 0, nullIndex >= 0 ? nullIndex : buffer.Length);
            }

            return result;
        }

        // ===== Widgets: Trees =====

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "igTreeNode_Str")]
        private static extern byte igTreeNode([MarshalAs(UnmanagedType.LPStr)] string label);

        public static bool TreeNode(string label)
        {
            return igTreeNode(label) != 0;
        }

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "igTreeNodeEx_Str")]
        private static extern byte igTreeNodeEx([MarshalAs(UnmanagedType.LPStr)] string label, ImGuiTreeNodeFlags flags);

        public static bool TreeNodeEx(string label, ImGuiTreeNodeFlags flags = ImGuiTreeNodeFlags.None)
        {
            return igTreeNodeEx(label, flags) != 0;
        }

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "igTreePop")]
        public static extern void TreePop();

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "igCollapsingHeader_TreeNodeFlags")]
        private static extern byte igCollapsingHeader([MarshalAs(UnmanagedType.LPStr)] string label, ImGuiTreeNodeFlags flags);

        public static bool CollapsingHeader(string label, ImGuiTreeNodeFlags flags = ImGuiTreeNodeFlags.None)
        {
            return igCollapsingHeader(label, flags) != 0;
        }

        // ===== Widgets: Menus =====

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "igBeginMainMenuBar")]
        private static extern byte igBeginMainMenuBar();

        public static bool BeginMainMenuBar()
        {
            return igBeginMainMenuBar() != 0;
        }

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "igEndMainMenuBar")]
        public static extern void EndMainMenuBar();

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "igBeginMenuBar")]
        private static extern byte igBeginMenuBar();

        public static bool BeginMenuBar()
        {
            return igBeginMenuBar() != 0;
        }

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "igEndMenuBar")]
        public static extern void EndMenuBar();

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "igBeginMenu")]
        private static extern byte igBeginMenu([MarshalAs(UnmanagedType.LPStr)] string label, byte enabled);

        public static bool BeginMenu(string label, bool enabled = true)
        {
            return igBeginMenu(label, enabled ? (byte)1 : (byte)0) != 0;
        }

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "igEndMenu")]
        public static extern void EndMenu();

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "igMenuItem_Bool")]
        private static extern byte igMenuItem([MarshalAs(UnmanagedType.LPStr)] string label, [MarshalAs(UnmanagedType.LPStr)] string shortcut, byte selected, byte enabled);

        public static bool MenuItem(string label, string shortcut = null, bool selected = false, bool enabled = true)
        {
            return igMenuItem(label, shortcut, selected ? (byte)1 : (byte)0, enabled ? (byte)1 : (byte)0) != 0;
        }

        // ===== Layout =====

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "igSeparator")]
        public static extern void Separator();

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "igSameLine")]
        public static extern void SameLine(float offset_from_start_x = 0.0f, float spacing = -1.0f);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "igIndent")]
        public static extern void Indent(float indent_w = 0.0f);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "igUnindent")]
        public static extern void Unindent(float indent_w = 0.0f);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "igSetNextItemWidth")]
        public static extern void SetNextItemWidth(float item_width);

        // ===== ID stack =====

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "igPushID_Str")]
        private static extern void igPushID([MarshalAs(UnmanagedType.LPStr)] string str_id);

        public static void PushID(string str_id)
        {
            igPushID(str_id ?? "");
        }

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "igPushID_Int")]
        public static extern void PushID(int int_id);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "igPopID")]
        public static extern void PopID();

        // ===== Style =====

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "igPushStyleColor_Vec4")]
        public static extern void PushStyleColor(ImGuiCol idx, Vector4 col);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "igPopStyleColor")]
        public static extern void PopStyleColor(int count = 1);

        // ===== Item/Widget utilities =====

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "igIsItemClicked")]
        private static extern byte igIsItemClicked(int mouse_button);

        public static bool IsItemClicked(int mouse_button = 0)
        {
            return igIsItemClicked(mouse_button) != 0;
        }

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "igIsItemHovered")]
        private static extern byte igIsItemHovered(int flags);

        public static bool IsItemHovered(int flags = 0)
        {
            return igIsItemHovered(flags) != 0;
        }

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "igIsItemToggledOpen")]
        private static extern byte igIsItemToggledOpen();

        public static bool IsItemToggledOpen()
        {
            return igIsItemToggledOpen() != 0;
        }

        // ===== Widgets: Combo =====

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "igBeginCombo")]
        private static extern byte igBeginCombo([MarshalAs(UnmanagedType.LPStr)] string label, [MarshalAs(UnmanagedType.LPStr)] string preview_value, ImGuiComboFlags flags);

        public static bool BeginCombo(string label, string preview_value, ImGuiComboFlags flags = ImGuiComboFlags.None)
        {
            return igBeginCombo(label, preview_value ?? "", flags) != 0;
        }

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "igEndCombo")]
        public static extern void EndCombo();

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "igSelectable_Bool")]
        private static extern byte igSelectable([MarshalAs(UnmanagedType.LPStr)] string label, byte selected, ImGuiSelectableFlags flags, Vector2 size);

        public static bool Selectable(string label, bool selected = false, ImGuiSelectableFlags flags = ImGuiSelectableFlags.None, Vector2 size = default)
        {
            return igSelectable(label, selected ? (byte)1 : (byte)0, flags, size) != 0;
        }

        // ===== Widgets: Drag/Slider =====

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "igDragFloat")]
        private static extern unsafe byte igDragFloat([MarshalAs(UnmanagedType.LPStr)] string label, float* v, float v_speed, float v_min, float v_max, [MarshalAs(UnmanagedType.LPStr)] string format, ImGuiSliderFlags flags);

        public static unsafe bool DragFloat(string label, ref float v, float v_speed = 1.0f, float v_min = 0.0f, float v_max = 0.0f, string format = "%.3f", ImGuiSliderFlags flags = ImGuiSliderFlags.None)
        {
            fixed (float* ptr = &v)
            {
                return igDragFloat(label, ptr, v_speed, v_min, v_max, format, flags) != 0;
            }
        }

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "igDragFloat3")]
        private static extern unsafe byte igDragFloat3([MarshalAs(UnmanagedType.LPStr)] string label, float* v, float v_speed, float v_min, float v_max, [MarshalAs(UnmanagedType.LPStr)] string format, ImGuiSliderFlags flags);

        public static unsafe bool DragFloat3(string label, ref Vector3 v, float v_speed = 1.0f, float v_min = 0.0f, float v_max = 0.0f, string format = "%.3f", ImGuiSliderFlags flags = ImGuiSliderFlags.None)
        {
            fixed (Vector3* ptr = &v)
            {
                return igDragFloat3(label, (float*)ptr, v_speed, v_min, v_max, format, flags) != 0;
            }
        }

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "igDragInt")]
        private static extern unsafe byte igDragInt([MarshalAs(UnmanagedType.LPStr)] string label, int* v, float v_speed, int v_min, int v_max, [MarshalAs(UnmanagedType.LPStr)] string format, ImGuiSliderFlags flags);

        public static unsafe bool DragInt(string label, ref int v, float v_speed = 1.0f, int v_min = 0, int v_max = 0, string format = "%d", ImGuiSliderFlags flags = ImGuiSliderFlags.None)
        {
            fixed (int* ptr = &v)
            {
                return igDragInt(label, ptr, v_speed, v_min, v_max, format, flags) != 0;
            }
        }

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "igInputFloat3")]
        private static extern unsafe byte igInputFloat3([MarshalAs(UnmanagedType.LPStr)] string label, float* v, [MarshalAs(UnmanagedType.LPStr)] string format, ImGuiInputTextFlags flags);

        public static unsafe bool InputFloat3(string label, ref Vector3 v, string format = "%.3f", ImGuiInputTextFlags flags = ImGuiInputTextFlags.None)
        {
            fixed (Vector3* ptr = &v)
            {
                return igInputFloat3(label, (float*)ptr, format, flags) != 0;
            }
        }

        // ===== Widgets: Color =====

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "igColorButton")]
        private static extern byte igColorButton([MarshalAs(UnmanagedType.LPStr)] string desc_id, Vector4 col, int flags, Vector2 size);
